# QuantaCrypt

./: .gitignore  README.md  RELEASING.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release.yml
docs/design/: encrypted-volumes.md  fuse-partial-range-reads.md  volumes-delta-save.md  volumes-merge-checklist.md
scripts/: build.py
src/quantacrypt/: __init__.py  __main__.py
src/quantacrypt/core/: __init__.py  crypto.py  fuse_ops.py  volume.py
src/quantacrypt/ui/: __init__.py  decryptor.py  encryptor.py  launcher.py  shared.py  updater.py  volume_manager.py
tests/: conftest.py  test_crypto.py  test_gui_logic.py  test_integration.py  test_volume.py
