[project]
name = "quantacrypt"
version = "1.0.0"
description = "Post-quantum file encryption using ML-KEM (Kyber-768) + AES-256-GCM with optional Shamir secret sharing"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["encryption", "post-quantum", "kyber", "shamir", "aes-gcm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=41.0",
    "argon2-cffi>=23.1",
    "kyber-py>=0.8",
    "shamirs>=1.0",
    "mnemonic>=0.20",
]

[project.optional-dependencies]
dnd = ["tkinterdnd2-universal>=1.7"]
strength = ["zxcvbn>=4.4"]
build = ["pyinstaller>=6.0", "Pillow>=10.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "quantacrypt[dnd,strength,build]",
]

[project.urls]
Homepage = "https://github.com/alexboccard/QuantaCrypt"
Repository = "https://github.com/alexboccard/QuantaCrypt"
Issues = "https://github.com/alexboccard/QuantaCrypt/issues"

[project.scripts]
quantacrypt = "quantacrypt:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=quantacrypt.core --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["src/quantacrypt/core"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]
show_missing = true
skip_empty = true
fail_under = 95

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantacrypt = ["assets/*.png"]
