[project]
name = "quantacrypt"
version = "1.3.0"
description = "Post-quantum file encryption using ML-KEM (Kyber-768) + AES-256-GCM with optional Shamir secret sharing"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["encryption", "post-quantum", "kyber", "shamir", "aes-gcm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    # cryptography < 44 has two Dependabot-flagged CVEs:
    #   - GHSA-h4gh-qq45-vh27 (buffer overflow on non-contiguous buffers,
    #     fixed in 43.0.1)
    #   - GHSA-pq5q-pcp9-gmvx (incomplete DNS name-constraint enforcement
    #     on peer names, fixed in 42.0.4)
    # 44.0 covers both.
    "cryptography>=44.0",
    "argon2-cffi>=23.1",
    "kyber-py>=0.8",
    "shamirs>=1.0",
    "mnemonic>=0.21",
]

[project.optional-dependencies]
dnd = ["tkinterdnd2-universal>=1.7"]
strength = ["zxcvbn>=4.4"]
volumes = ["fusepy>=3.0"]
# Pillow < 11.3 has the FITS GZIP decompression-bomb advisory (High,
# GHSA-gg2v-6j66-8q5j); the build only uses Pillow to encode icns
# slices, but the floor still has to cover the patched release.
build = ["pyinstaller>=6.10", "Pillow>=11.3"]
dev = [
    # pytest < 8.3.4 has GHSA-7g38-3x9v-v7vp (vulnerable tmpdir handling,
    # Moderate); Pygments < 2.15 has GHSA-mrwq-x4v8-fh7p (ReDoS on the
    # GUID regex, Low).  Pygments is pulled transitively by pytest's
    # error-formatting, but pin it explicitly so Dependabot can see the
    # floor directly.
    "pytest>=8.3.4",
    "pytest-cov>=4.0",
    "pygments>=2.15",
    "quantacrypt[dnd,strength,build]",
]

[project.urls]
Homepage = "https://github.com/alexboccard/QuantaCrypt"
Repository = "https://github.com/alexboccard/QuantaCrypt"
Issues = "https://github.com/alexboccard/QuantaCrypt/issues"

[project.scripts]
quantacrypt = "quantacrypt:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=quantacrypt.core --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["src/quantacrypt/core"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]
show_missing = true
skip_empty = true
fail_under = 95

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantacrypt = ["assets/*.png"]
